--- a/R-and-Python.qmd
+++ b/R-and-Python.qmd
@@ -1,7 +1,19 @@
 ---
-layout: default
 title: Working with big data in R and Python
+format:
+  html:
+    theme: cosmo
+    css: assets/styles.css
+    toc: true
+    code-copy: true
+    code-block-bg: true
+    code-block-border-left: "#31BAE9" 
+ipynb-shell-interactivity: all
+code-overflow: wrap
+execute:
+  freeze: auto
 ---
+
 
 ```{r setup, include=FALSE}
 options(replace.assign=TRUE, width=65)
@@ -189,7 +201,9 @@ questionsOfAge <- users %>% filter(age > 75) %>%
 head(questionsOfAge)
 ```
 
-> **Challenge**: Why did I first filter and then do the join, rather than the reverse?
+::: {.callout-tip title="Challenge"}
+Why did I first filter and then do the join, rather than the reverse?
+:::
 
 The join functions include `inner_join`, `left_join`, `right_join`, `full_join`. I don't see any cross join functionality.
 
@@ -225,7 +239,9 @@ highVotes <- users %>% filter(upvotes > 10000)
 head(highVotes)
 ```
 
-> **Note**: dplyr uses lazy evaluation when interfacing with databases -- it only does the query and return results when the results are needed (in this case when we call `head`).
+::: {.callout-note}
+dplyr uses lazy evaluation when interfacing with databases -- it only does the query and return results when the results are needed (in this case when we call `head`).
+:::
 
 ## 3 Manipulating datasets quickly in memory 
 
